<resources>
    <string name="app_name">Food Ordering System</string>
    <!-- Urls -->
    <string name="url_login">http://rjtmobile.com/ansari/fos/fosapp/fos_login.php?&amp;user_phone=%s&amp;user_password=%s</string>
    <string name="url_register">http://rjtmobile.com/ansari/fos/fosapp/fos_reg.php?&amp;user_name=%s&amp;user_email=%s&amp;user_phone=%s&amp;user_password=%s&amp;user_add=%s</string>
    <string name="url_reset">http://rjtmobile.com/ansari/fos/fosapp/fos_reset_pass.php?&amp;user_phone=%s&amp;user_password=%s&amp;newpassword=%s</string>
    <string name="url_food">http://rjtmobile.com/ansari/fos/fosapp/fos_food_loc.php?city=%s</string>
    <string name="url_update_address">http://rjtmobile.com/ansari/fos/fosapp/fos_update_address.php?&amp;user_phone=%s&amp;user_password=%s&amp;user_add=%s</string>
    <string name="url_order">http://rjtmobile.com/ansari/fos/fosapp/order_recent.php?&amp;user_phone=%s</string>
    <string name="url_order_status">http://rjtmobile.com/ansari/fos/fosapp/order_track.php?&amp;order_id=%s</string>
    <string name="url_order_place">http://rjtmobile.com/ansari/fos/fosapp/order_request.php?&amp;order_category=%s&amp;order_name=%s&amp;order_quantity=%s&amp;total_order=%s&amp;order_delivery_add=%s&amp;order_date=%s&amp;user_phone=%s</string>
    <!-- Strings related to login -->
    <string name="prompt_phone_number">Phone Number</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_reset_password">Reset Password</string>
    <string name="invalid_phone">Not a valid phone number!</string>
    <string name="invalid_password">Password must contains at least 4 characters!</string>
    <string name="login_failed">Login failed.</string>
    <!-- Strings related to register -->
    <string name="prompt_email">Email Address</string>
    <string name="prompt_name">Username</string>
    <string name="prompt_address">Address</string>
    <string name="action_register">Register</string>
    <string name="invalid_username">Not a valid username!</string>
    <string name="invalid_email">Not a valid email address!</string>
    <string name="invalid_address">Not a valid address!</string>
    <!-- Strings related to reset password -->
    <string name="old_password">Provisional Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="button_submit">Submit</string>
    <string name="invalid_password_match">The new password should be consistent.</string>
    <string name="reset_success">Password reset successfully!</string>
    <!-- Strings related to bottom navigation bar -->
    <string name="bottom_home">Home</string>
    <string name="bottom_orders">Orders</string>
    <string name="bottom_userInfo">User</string>
    <string name="bottom_checkout">Checkout</string>
    <!-- Strings related to food -->
    <string name="delivery_from">From</string>
    <string-array name="foodCities">
        <item>City</item>
        <item>Delhi</item>
        <item>Banglore</item>
    </string-array>
    <string name="food_veg">Veg Food</string>
    <string name="food_non_veg">Non Veg Food</string>
    <string name="tool_bar_cart_items">Cart</string>
    <string name="add_to_cart_button">Add to Cart</string>
    <string name="food_quantity">Quantity:</string>
    <string name="Quantity_Null">Quantity cannot be zero!</string>
    <!-- Strings related to user info -->
    <string name="personal_info_logout">LogOut</string>
    <string name="personal_info_default_address">Default Address</string>
    <string name="register_user_address_error">Please enter your address</string>
    <string name="personal_info_updateAdd">Update Address</string>
    <string name="personal_info_shipping_confirm">Confirm Address</string>
    <string name="dialog_title">Please enter your password</string>
    <string-array name="countries">
        <item>USA</item>
        <item>INDIA</item>
        <item>UK</item>
        <item>MEX</item>
    </string-array>
    <string-array name="states">
        <item>IL</item>
        <item>CA</item>
        <item>Mass</item>
        <item>Or</item>
        <item>NY</item>
        <item>NJ</item>
        <item>PHI</item>
        <item>BT</item>
        <item>MO</item>
        <item>WA</item>
        <item>AL</item>
        <item>NH</item>
    </string-array>
    <!-- Strings related to orders -->
    <string name="hint_search">Search by Order ID</string>
    <string name="hint_orderId">ID:</string>
    <string name="hint_orderTotal">$ </string>
    <string name="hint_orderStatus">Order Status:</string>
    <string name="hint_orderDate">Date: </string>
    <string name="hint_orderName">Name:</string>
    <string name="hint_orderQuantity">Quantity:</string>
    <string name="hint_orderAddress">Deliver Address:</string>
    <string name="button_track">Track</string>
    <string name="button_review">Write a Review</string>
    <!-- Strings related to review -->
    <string name="hint_review">Post your review here</string>
    <string name="previous_review_title">Previous Reviews</string>
    <string name="empty_review1">No review for this item yet.</string>
    <string name="empty_review2">Be the first one to write a review for it.</string>
    <string name="tool_address_map">Address Map</string>
    <!-- Strings related to Check out -->
    <string name="button_continue">Continue</string>
    <string name="button_cancel">Cancel</string>
    <string name="map_dilevery_address">Delivery Address</string>
</resources>