<?xml version="1.0" encoding="utf-8"?>
<menu  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/bottom_home"
        android:title="@string/bottom_home"
        android:icon="@drawable/home"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/bottom_orders"
        android:title="@string/bottom_orders"
        android:icon="@drawable/orders_icon"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/bottom_personalInfo"
        android:title="@string/bottom_userInfo"
        android:icon="@drawable/personal_icon"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/bottom_checkout"
        android:title="@string/bottom_checkout"
        android:icon="@drawable/personal_icon"
        app:showAsAction="ifRoom"/>
</menu>