<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".OrdersFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/searchCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="10dp"
        app:cardUseCompatPadding="true"
        app:cardPreventCornerOverlap="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_search"
                android:id="@+id/searchText"
                android:layout_toStartOf="@+id/searchButton" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search_24dp"
                android:id="@+id/searchButton"
                android:background="@android:color/transparent"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/searchCardView"
        android:visibility="gone"
        android:elevation="10dp"
        app:cardUseCompatPadding="true"
        app:cardPreventCornerOverlap="true"
        app:cardCornerRadius="10dp"
        android:id="@+id/trackingCard">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:id="@+id/orderId"
                android:text="@string/hint_orderId" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/orderId"
                android:id="@+id/orderIdText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/totalOrderText"
                android:id="@+id/totalOrder"
                android:text="@string/hint_orderTotal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:id="@+id/totalOrderText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/orderStatusText"
                android:layout_alignBottom="@+id/orderStatusText"
                android:id="@+id/orderStatus"
                android:text="@string/hint_orderStatus" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/totalOrderText"
                android:layout_alignTop="@+id/orderDate"
                android:id="@+id/orderStatusText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/orderId"
                android:layout_below="@+id/orderId"
                android:layout_marginTop="10dp"
                android:id="@+id/orderDate"
                android:text="@string/hint_orderDate" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/orderDate"
                android:layout_alignBottom="@+id/orderDate"
                android:layout_marginStart="10dp"
                android:id="@+id/orderDateText"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/trackingCard"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="5dp"
        android:scrollbars="vertical"
        android:id="@+id/orderRecyclerView" />

</androidx.constraintlayout.widget.ConstraintLayout>